@@ -4,6 +4,7 @@ import build.Dependencies
 import build.Dependencies.{Scala211Version, Scala212Version, SbtVersion}
 
 ThisBuild / dynverSeparator := "-"
+ThisBuild / resolvers ++= Resolver.sonatypeOssRepos("snapshot")
 
 // Add hook for scalafmt validation
 Global / onLoad ~= { old =>
@@ -64,6 +65,7 @@ lazy val bloopShared = project
       Dependencies.log4j,
       Dependencies.xxHashLibrary,
       Dependencies.configDirectories,
+      Dependencies.coursierInterface,
       Dependencies.sbtTestInterface,
       Dependencies.sbtTestAgent
     )
@@ -107,20 +109,9 @@ lazy val backend = project
     )
   )
 
-lazy val sockets: Project = project
-  .settings(
-    crossPaths := false,
-    autoScalaLibrary := false,
-    description := "IPC: Unix Domain Socket and Windows Named Pipes for Java",
-    libraryDependencies ++= Seq(Dependencies.jna, Dependencies.jnaPlatform),
-    javacOptions ++= Seq("-source", "1.8", "-target", "1.8"),
-    (Compile / doc / sources) := Nil
-  )
-
 // For the moment, the dependency is fixed
 lazy val frontend: Project = project
   .dependsOn(
-    sockets,
     bloopShared,
     backend,
     backend % "test->test",
@@ -159,7 +150,8 @@ lazy val frontend: Project = project
       Dependencies.caseApp,
       Dependencies.scalaDebugAdapter,
       Dependencies.bloopConfig,
-      Dependencies.logback
+      Dependencies.logback,
+      Dependencies.libdaemonjvm
     ),
     // needed for tests and to be automatically updated
     Test / libraryDependencies += Dependencies.semanticdb intransitive (),
@@ -202,35 +194,33 @@ lazy val frontend: Project = project
     }
   )
 
-lazy val bloopgunSettings = Seq(
-  name := "bloopgun-core",
+lazy val cliSettings = Seq(
+  name := "cli",
+  scalaVersion := Dependencies.Scala213Version,
   (run / fork) := true,
   (Test / fork) := true,
   (Test / parallelExecution) := false,
-  buildInfoPackage := "bloopgun.internal.build",
-  buildInfoKeys := List(Keys.version),
-  buildInfoObject := "BloopgunInfo",
   libraryDependencies ++= List(
-    // Dependencies.configDirectories,
-    Dependencies.snailgun,
-    // Use zt-exec instead of nuprocess because it doesn't require JNA (good for graalvm)
-    Dependencies.ztExec,
-    Dependencies.logback,
-    Dependencies.coursierInterface,
-    Dependencies.coursierInterfaceSubs,
+    Dependencies.caseApp21,
+    Dependencies.oslib,
+    Dependencies.coursier,
+    Dependencies.coursierJvm,
+    Dependencies.dependency,
     Dependencies.jsoniterCore,
+    Dependencies.svm % Provided,
     Dependencies.jsoniterMacros % Provided
   ),
-  (GraalVMNativeImage / mainClass) := Some("bloop.bloopgun.Bloopgun"),
+  (GraalVMNativeImage / mainClass) := Some("bloop.cli.Bloop"),
   graalVMNativeImageOptions ++= {
     val reflectionFile = (Compile / Keys.sourceDirectory).value./("graal")./("reflection.json")
     assert(reflectionFile.exists, s"${reflectionFile.getAbsolutePath()} doesn't exist")
     List(
-      "--enable-http",
-      "--enable-https",
+      "--add-exports=org.graalvm.nativeimage.base/com.oracle.svm.util=ALL-UNNAMED",
+      "--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jni=ALL-UNNAMED",
+      "--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED",
+      "--no-fallback",
       "--enable-url-protocols=http,https",
       "--enable-all-security-services",
-      "--no-fallback",
       s"-H:ReflectionConfigurationFiles=$reflectionFile",
       "-H:+ReportExceptionStackTraces",
       "--initialize-at-build-time=scala.Symbol",
@@ -242,61 +232,39 @@ lazy val bloopgunSettings = Seq(
   }
 )
 
-lazy val bloopgun: Project = project
-  .disablePlugins(ScriptedPlugin, ScalafixPlugin)
-  .enablePlugins(BuildInfoPlugin, GraalVMNativeImagePlugin)
+lazy val bloopRifle: Project = project
+  .in(file("bloop-rifle"))
+  .disablePlugins(ScriptedPlugin)
+  .enablePlugins(BuildInfoPlugin)
   .settings(
-    testSuiteSettings,
-    bloopgunSettings,
-    target := (file("bloopgun") / "target" / "bloopgun-2.12").getAbsoluteFile
-  )
-
-lazy val bloopgun213: Project = project
-  .in(file("bloopgun"))
-  .disablePlugins(ScriptedPlugin, ScalafixPlugin)
-  .enablePlugins(BuildInfoPlugin, GraalVMNativeImagePlugin)
-  .settings(
-    testSuiteSettings,
-    bloopgunSettings,
+    name := "bloop-rifle",
     scalaVersion := Dependencies.Scala213Version,
-    target := (file("bloopgun") / "target" / "bloopgun-2.13").getAbsoluteFile
-  )
-
-lazy val launcherTest = project
-  .in(file("launcher-test"))
-  .dependsOn(launcher, frontend % "test->test")
-  .settings(
-    name := "bloop-launcher-test",
-    (publish / skip) := true,
-    scalafixSettings,
-    testSuiteSettings,
-    (Test / fork) := true,
-    (Test / parallelExecution) := false,
     libraryDependencies ++= List(
-      Dependencies.coursierInterface
+      Dependencies.bsp4j,
+      Dependencies.scalaCollectionCompat,
+      Dependencies.libdaemonjvm,
+      Dependencies.snailgun,
+      Dependencies.expecty % Test,
+      Dependencies.munit % Test
+    ),
+    buildInfoPackage := "bloop.rifle.internal",
+    buildInfoKeys := List[BuildInfoKey](
+      Keys.version,
+      // Scala version used by the server itself
+      "scalaVersion" -> Dependencies.Scala212Version,
+      "bspVersion" -> Dependencies.bspVersion
     )
   )
 
-lazy val launcher = project
-  .in(file("launcher-core"))
+lazy val cli: Project = project
+  .in(file("cli"))
   .disablePlugins(ScriptedPlugin, ScalafixPlugin)
-  .dependsOn(sockets, bloopgun)
+  .enablePlugins(BuildInfoPlugin, GraalVMNativeImagePlugin)
   .settings(
-    name := "bloop-launcher-core",
     testSuiteSettings,
-    target := (file("launcher-core") / "target" / "launcher-2.12").getAbsoluteFile
+    cliSettings
   )
-
-lazy val launcher213 = project
-  .in(file("launcher-core"))
-  .disablePlugins(ScriptedPlugin, ScalafixPlugin)
-  .dependsOn(sockets, bloopgun213)
-  .settings(
-    name := "bloop-launcher-core",
-    testSuiteSettings,
-    scalaVersion := Dependencies.Scala213Version,
-    target := (file("launcher-core") / "target" / "launcher-2.13").getAbsoluteFile
-  )
+  .dependsOn(bloopRifle)
 
 lazy val benchmarks = project
   .dependsOn(frontend % "compile->it", BenchmarkBridgeCompilation % "compile->compile")
@@ -345,13 +313,14 @@ lazy val buildpressConfig = (project in file("buildpress-config"))
   )
 
 lazy val buildpress = project
-  .dependsOn(bloopgun, bloopShared, buildpressConfig)
+  .dependsOn(bloopShared, buildpressConfig)
   .settings(
     scalaVersion := Scala212Version,
     scalafixSettings,
     (run / fork) := true,
     libraryDependencies ++= List(
-      Dependencies.caseApp
+      Dependencies.caseApp,
+      Dependencies.ztExec
     )
   )
 
@@ -434,21 +403,17 @@ lazy val nativeBridge05 = project
 val allProjects = Seq(
   backend,
   benchmarks,
-  bloopgun,
-  bloopgun213,
+  bloopRifle,
+  cli,
   bloopShared,
   buildpress,
   buildpressConfig,
   frontend,
   jsBridge06,
   jsBridge1,
-  launcher,
-  launcher213,
-  launcherTest,
   nativeBridge04,
   nativeBridge05,
-  sbtBloop,
-  sockets
+  sbtBloop
 )
 
 val allProjectReferences = allProjects.map(p => LocalProject(p.id))
